fixed spacing on sharing / like buttons

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -40,5 +40,7 @@
   font-style: italic;
 }
 
-.post-header {
+.post .post-content {
+  border-bottom: thin solid #ccc;
+  padding-bottom: 15px;
 }
